--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   </body>
 </html>
